fix: canhe z-index of .contentBox__ButtonToEnterOnInvitation to 1, because was a bug on clicking.

--- a/src/pages/Welcome/style.scss
+++ b/src/pages/Welcome/style.scss
@@ -61,13 +61,17 @@
   color: transparent;
   }
   
-  .contentBox__15thBirth {
-    font-family: "Playfair Display", serif;
-    font-size: 6.4rem;
-    line-height: 7.0rem;
-    background: $lilac-gradient;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: transparent;
-  }
+.contentBox__15thBirth {
+  font-family: "Playfair Display", serif;
+  font-size: 6.4rem;
+  line-height: 7.0rem;
+  background: $lilac-gradient;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
+
+.contentBox__ButtonToEnterOnInvitation {
+  z-index: 1;
+}
